# esb-home-generic-device

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: sdk_config.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  debug_swo.c  main.c
toolchain/: toolchain_arm_cm4f.cmake
